# remoter

./: .gitignore  PROJECT.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  release.yml
scripts/: release.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  sftp.rs  ssh.rs  state.rs
src/components/: PortProxyDrawer.tsx  SFTPDrawer.tsx  SSHTerminal.tsx  ScriptSidebar.tsx  TitleBar.tsx
src/components/dialogs/: AddSessionDialog.tsx  BatchAddDialog.tsx  EditScriptDialog.tsx  FileDistributeDialog.tsx  HistoryDialog.tsx  ManageScriptsDialog.tsx  NewGroupDialog.tsx  ScriptRunDialog.tsx
src/components/pages/: MultiPage.tsx  SettingsPage.tsx  SinglePage.tsx
