[package]
name = "remoter"
version = "0.1.2"
description = "A Tauri App"
authors = ["qc233"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "remoter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl", "openssl-on-win32"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8"
anyhow = "1.0"
window-vibrancy = "0.5"


